<resources>
    <string name="app_name">Портфолио студента</string>
    <string name="app_version">version 1.8.1 Alpha</string>


    <string name="default_text">&lt;&lt;empty&gt;&gt;</string>


    <!-- Загрузочный экран -->
    <string name="splash_load">Loading</string>
    <string name="splash_progress">Loading...</string>


    <!-- Авторизация -->
    <string name="login_activity">Authorization</string>
    <string name="prompt_username">Login</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Authorization</string>
    <string name="error_invalid_password">Password is too short</string>
    <string name="error_empty_password">Password not entered</string>
    <string name="error_empty_username">Login not entered</string>
    <string name="error_incorrect_connection">Connection failed</string>
    <string name="login_progress">Authorization…</string>
    <string name="action_recovery">Access recovery</string>
    <string name="image_description">Picture</string>
    <string name="login_recovery_message">Enter login:</string>
    <string name="login_recovery_ok">OK</string>
    <string name="login_recovery_cancel">Cancel</string>


    <!-- Домашний экран -->
    <string name="home_activity">Profile</string>
    <string name="home_progress">Loading...</string>
    <string name="title_profile">Profile</string>
    <string name="title_portfolio">Portfolio</string>
    <string name="title_upload">Loading</string>
    <string name="title_users">Users</string>
    <string name="home_error_title">Connection error</string>
    <string name="home_error_message">There was an error connecting. Please try again later.</string>


    <!-- Профиль -->
    <string name="profile_faculty">Faculty:</string>
    <string name="profile_group">Group:</string>
    <string name="profile_number">Phone:</string>
    <string name="profile_mail">Mail:</string>
    <string name="profile_info">Additional Information:</string>
    <string name="title_activity_settings">Settings</string>
    <string name="profile_empty_number">not specified</string>
    <string name="profile_empty_mail">not specified</string>


    <!-- Портфолио -->
    <string name="portfolio_name">Description:</string>
    <string name="portfolio_category">Category:</string>
    <string name="portfolio_criterion">Criterion of receipt:</string>
    <string name="portfolio_type">Type of participation:</string>
    <string name="portfolio_date_event">Event date:</string>
    <string name="portfolio_date_publication">Publication date:</string>
    <string name="portfolio_file_name">File name:</string>
    <string name="portfolio_file_type">File type:</string>
    <string name="portfolio_file_load">Upload</string>
    <string name="portfolio_update">Update</string>
    <string name="portfolio_note">Note</string>
    <string name="portfolio_deleted">deleted</string>
    <string name="portfolio_delete_error">Delete error</string>


    <!-- Список портфолио -->
    <string name="portfolio_list_search">Search by name:</string>
    <string name="portfolio_list_category">Search by category:</string>
    <string name="portfolio_list_all_categories">All categories</string>


    <!-- Список пользователей -->
    <string name="users_list_faculty">Search by faculty:</string>
    <string name="users_list_group">Search by group:</string>
    <string name="users_list_all_faculties">All faculties</string>
    <string name="users_list_all_groups">All groups</string>



    <!-- Загрузка портфолио -->
    <string name="upload_name">Description</string>
    <string name="upload_category">Category:</string>
    <string name="upload_criterion">Criterion of receipt:</string>
    <string name="upload_type">Type of participation:</string>
    <string name="upload_date_event">Event date:</string>
    <string name="upload_date_publication">Publication date:</string>
    <string name="upload_default_date">00 Jan 2019</string>
    <string name="upload_file_choose">File selection:</string>
    <string name="upload_file_choose_twice">Select additional file:</string>
    <string name="upload_file_dir">...</string>
    <string name="upload_file_search">Search</string>
    <string name="upload_add">Add</string>
    <string name="upload_upload">Upload</string>
    <string name="upload_empty_criterion">No receive criterion selected</string>
    <string name="upload_short_name">Description too short</string>
    <string name="upload_done">Portfolio uploaded</string>
    <string name="upload_max_file_size">Maximum file size: 10 MB</string>
    <string name="upload_file_failed">Uploaded Failed!</string>
    <string name="upload_file_complete">Uploaded Successfully</string>
    <string name="upload_file_process">Uploading...</string>


    <string-array name="months">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>


    <!-- Элементы списка -->
    <string name="list_element_close">X</string>
    <string name="list_element_title">Delete item</string>
    <string name="list_element_message">Delete information about this academic achievement?</string>
    <string name="list_element_ok">Delete</string>
    <string name="list_element_cancel">Cancel</string>


    <!-- Окно PIN-кода -->

    <string name="title_activity_pin">BSTU Portfolio</string>

    <string name="key_1">1</string>
    <string name="key_2">2</string>
    <string name="key_3">3</string>
    <string name="key_4">4</string>
    <string name="key_5">5</string>
    <string name="key_6">6</string>
    <string name="key_7">7</string>
    <string name="key_8">8</string>
    <string name="key_9">9</string>
    <string name="key_0">0</string>
    <string name="key_back">x</string>


    <string name="pin_create_message">Come up with a four-digit PIN:</string>
    <string name="pin_error_title">Error!</string>
    <string name="pin_error_message">Wrong PIN entered</string>
    <string name="pin_error_ok">OK</string>
    <string name="pin_done_message">Done</string>
    <string name="pin_exit">Exit...</string>


    <!-- Окно настроек -->

    <string name="settings_category_main">Main</string>
    <string name="settings_profile_edit">Profile editing</string>
    <string name="settings_change_password">Change Password</string>
    <string name="settings_category_appearance">Appearance</string>
    <string name="settings_language_selection">Language</string>
    <string name="settings_night_theme">Night theme</string>
    <string name="settings_night_theme_on">Night theme on</string>
    <string name="settings_night_theme_off">Night theme off</string>
    <string name="settings_text_size">Text size</string>
    <string name="settings_category_other">Other</string>
    <string name="settings_upload_avatar">Avatar upload</string>
    <string name="settings_about">About</string>
    <string name="settings_exit">Exit</string>
    <string name="settings_exit_summary">Exit application</string>


    <string name="settings_exit_message">For the settings to take effect, you must restart the application.</string>
    <string name="settings_exit_title">Warring</string>
    <string name="settings_exit_ok">OK</string>
    <string name="settings_exit_restart">Restart now</string>


    <!-- Окно редактирования -->
    <string name="title_activity_edit">Edit</string>
    <string name="edit_profile">Profile edit</string>
    <string name="edit_password">Password edit</string>
    <string name="edit_about">About</string>
    <string name="edit_apply">Apply</string>
    <string name="edit_cancel">Cancel</string>
    <string name="edit_password_old">Old password</string>
    <string name="edit_password_new">New password</string>
    <string name="edit_password_repeat">Repeat password</string>
    <string name="edit_complete_profile">Information successfully changed</string>
    <string name="edit_complete_password">Password successfully changed</string>
    <string name="edit_error_data">An error has occurred (check the validity of the data entered)</string>
    <string name="edit_error_connection">Connection error</string>
    <string name="edit_error_repeat">Passwords do not match</string>

    <string name="edit_about_info_author">Program author: BSTU student D. Fadeev.</string>
    <string name="edit_about_info_additional">This application is a Graduation work.</string>
    <string name="edit_about_info_contact">Developer contact: whitehydra@yandex.ru</string>

</resources>
