<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ProfileEditFragment"
    style="@style/layout.Edit.Background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/layout.Edit.String">

        <TextView
            android:id="@+id/edNumberTag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_number" />

        <EditText
            android:id="@+id/edNumberValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="phone"
            tools:ignore="Autofill,LabelFor" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/layout.Edit.String">

        <TextView
            android:id="@+id/edMailTag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_mail" />

        <EditText
            android:id="@+id/edMailValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            tools:ignore="Autofill,LabelFor" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/layout.Edit.String">

        <TextView
            android:id="@+id/edInfoTag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_info" />

        <EditText
            android:id="@+id/edInfoValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textMultiLine"
            android:lines="3"
            android:minLines="1"
            android:maxLines="5"
            android:scrollbars="vertical"
            android:text="@string/default_text"
            tools:ignore="Autofill,LabelFor" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="bottom"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="center|bottom">

        <Button
            android:id="@+id/edCancelProfileEdit"
            style="@style/button.Edit"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/edit_cancel"
            tools:ignore="NestedWeights" />

        <Button
            android:id="@+id/edApplyProfileEdit"
            style="@style/button.Edit"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/edit_apply" />
    </LinearLayout>

</LinearLayout>