<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PasswordEditFragment"
    style="@style/layout.Edit.Background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/layout.Edit.String">

        <EditText
            android:id="@+id/edOldPasswordValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/edit_password_old"
            android:inputType="textPassword"
            tools:ignore="Autofill,LabelFor" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/layout.Edit.String">

        <EditText
            android:id="@+id/edNewPasswordValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/edit_password_new"
            android:inputType="textPassword"
            tools:ignore="Autofill,LabelFor" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/layout.Edit.String">

        <EditText
            android:id="@+id/edRepeatPasswordValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/edit_password_repeat"
            android:inputType="textPassword"
            tools:ignore="Autofill,LabelFor" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="bottom"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="center|bottom">

        <Button
            android:id="@+id/edCancelPasswordEdit"
            style="@style/button.Edit"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/edit_cancel"
            tools:ignore="NestedWeights" />

        <Button
            android:id="@+id/edApplyPasswordEdit"
            style="@style/button.Edit"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/edit_apply" />
    </LinearLayout>

</LinearLayout>