<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PINActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarPIN"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:theme="@style/toolBarStyle"
        app:titleTextAppearance="@style/toolBarStyle.TitleText" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pin_create_message"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/pin_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="80dp"
            android:autofillHints=""
            android:clickable="false"
            android:cursorVisible="false"
            android:ems="10"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:gravity="center_horizontal"
            android:inputType="textPassword"
            android:textSize="24sp"
            tools:ignore="LabelFor,UnusedAttribute" />

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <Button
                android:id="@+id/key_1"
                style="@style/button.PIN"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/key_1"
                app:layout_constraintEnd_toStartOf="@+id/key_2"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/key_2"
                style="@style/button.PIN"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginTop="16dp"
                android:text="@string/key_2"
                app:layout_constraintEnd_toStartOf="@+id/key_3"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/key_1"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/key_3"
                style="@style/button.PIN"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/key_3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/key_2"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/key_4"
                style="@style/button.PIN"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:text="@string/key_4"
                app:layout_constraintEnd_toStartOf="@+id/key_5"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/key_1" />

            <Button
                android:id="@+id/key_5"
                style="@style/button.PIN"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginTop="32dp"
                android:text="@string/key_5"
                app:layout_constraintEnd_toStartOf="@+id/key_6"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/key_4"
                app:layout_constraintTop_toBottomOf="@+id/key_2" />

            <Button
                android:id="@+id/key_6"
                style="@style/button.PIN"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:text="@string/key_6"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/key_5"
                app:layout_constraintTop_toBottomOf="@+id/key_3" />

            <Button
                android:id="@+id/key_7"
                style="@style/button.PIN"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:text="@string/key_7"
                app:layout_constraintEnd_toStartOf="@+id/key_8"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/key_4" />

            <Button
                android:id="@+id/key_8"
                style="@style/button.PIN"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginTop="32dp"
                android:text="@string/key_8"
                app:layout_constraintEnd_toStartOf="@+id/key_9"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/key_7"
                app:layout_constraintTop_toBottomOf="@+id/key_5" />

            <Button
                android:id="@+id/key_9"
                style="@style/button.PIN"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:text="@string/key_9"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/key_8"
                app:layout_constraintTop_toBottomOf="@+id/key_6" />

            <Button
                android:id="@+id/key_0"
                style="@style/button.PIN"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginTop="32dp"
                android:text="@string/key_0"
                app:layout_constraintEnd_toEndOf="@+id/key_8"
                app:layout_constraintTop_toBottomOf="@+id/key_8" />

            <Button
                android:id="@+id/key_back"
                style="@style/button.PIN"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginTop="32dp"
                android:text="@string/key_back"
                app:layout_constraintEnd_toEndOf="@+id/key_9"
                app:layout_constraintTop_toBottomOf="@+id/key_9" />
        </android.support.constraint.ConstraintLayout>

    </LinearLayout>

</LinearLayout>