<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_height="40dp"
        android:layout_width="match_parent"
        app:theme="@style/toolBarStyle"
        app:titleTextAppearance="@style/toolBarStyle.TitleText"/>

    <ScrollView
        android:id="@+id/lgLoginFormScroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/lgLoginForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/layout.Login">

            <ImageView
                android:id="@+id/lgLogo"
                app:srcCompat="@drawable/logo_blue"
                android:contentDescription="@string/image_description"
                style="@style/logo"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/lgUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_username"
                    android:importantForAutofill="no"
                    tools:ignore="UnusedAttribute"
                    style="@style/text.Login.Username"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/lgPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:importantForAutofill="no"
                    tools:ignore="UnusedAttribute"
                    style="@style/text.Login.Password"/>

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/lgSignInButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_sign_in"
                style="@style/button.Login.Sign"/>

            <Button
                android:id="@+id/lgRecoveryButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_recovery"
                style="@style/button.Login.Recovery"/>

        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/loginProgress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_progress"
        style="@style/text.Login.Progress"/>

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />
</LinearLayout>