<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment"
    style="@style/layout.Profile.Background">

    <LinearLayout
        android:id="@+id/pfHead"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/layout.Profile.Head">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/pfAvatar"
            android:layout_width="140dp"
            android:layout_height="140dp"
            style="@style/avatar"/>

        <LinearLayout
            android:id="@+id/pfBaseInfo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/layout.Profile.BaseInfo">

            <TextView
                android:id="@+id/pfNameValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/default_text"
                style="@style/text.Profile.Name"/>

            <TextView
                android:id="@+id/pfPositionValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/default_text"
                style="@style/text.Profile.Position" />

            <LinearLayout
                android:id="@+id/pfFaculty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/layout.Profile.String">

                <TextView
                    android:id="@+id/pfFacultyTag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_faculty"
                    style="@style/text.Profile.Tag"/>

                <TextView
                    android:id="@+id/pfFacultyValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/default_text"
                    style="@style/text.Profile.Value"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/pfGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/layout.Profile.String">

                <TextView
                    android:id="@+id/pfGroupTag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_group"
                    style="@style/text.Profile.Tag"/>

                <TextView
                    android:id="@+id/pfGroupValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/default_text"
                    style="@style/text.Profile.Value"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/pfBody"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/pfNumber"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/layout.Profile.String">

            <TextView
                android:id="@+id/pfNumberTag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_number"
                style="@style/text.Profile.Tag"/>

            <TextView
                android:id="@+id/pfNumberValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_text"
                style="@style/text.Profile.Value"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/pfMail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/layout.Profile.String">

            <TextView
                android:id="@+id/pfMailTag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_mail"
                style="@style/text.Profile.Tag"/>

            <TextView
                android:id="@+id/pfMailValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_text"
                style="@style/text.Profile.Value"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/pfInfo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/layout.Profile.String"
            android:orientation="vertical">

            <TextView
                android:id="@+id/pfInfoTag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile_info"
                style="@style/text.Profile.Tag"/>

            <TextView
                android:id="@+id/pfInfoValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/default_text"
                style="@style/text.Profile.Value"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>